--- a/josh-proxy/Cargo.toml
+++ b/josh-proxy/Cargo.toml
@@ -16,6 +16,8 @@ clap = "2.33"
 futures = "0.3"
 tokio = { version = "1.0", features = ["full"] }
 hyper = { version = "0.14", features = ["stream"] }
+tokio-util = "*"
+bytes = "*"
 hyper_cgi = "0.1"
 toml = "0.5"
 git2 = { version = "0.13", default-features = false }
