--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,12 +20,14 @@ git2 = { git = "https://github.com/initcrash/git2-rs.git", default-features = fa
 clap = "2"
 tracing = "*"
 bincode = "*"
+bitvec = "*"
 percent-encoding = "2.1"
 serde = {version = "*", features = ["derive"]}
 regex = "1.4"
 lazy_static = "1.4"
 pest_derive = "2.1"
 pest= "2.1"
+hex = "*"
 toml= "0.5"
 defer= "*"
 glob = "*"
